# cristhianmotoche.github.io

./: .gitignore  .gitmodules  CNAME  README.md  about.html  about.markdown  about.rst  archive.html  circle.yml  contact.html  contact.markdown  cristhianmotoche-github-io.cabal  index.html  new-post.sh  site.hs  sitemap.xml  stack.yaml
.circleci/: config.yml
css/: default.css  default.css.map  hk-pyg.css  sticky-footer-navbar.css  tables.css
images/: logo-devil-blog.ora
posts/: 1900-01-01-learning.html  1900-01-01-learning.md  2015-11-12-184700-First-Blog-Post.html  2015-11-12-184700-First-Blog-Post.mdn  2015-12-05-184700-First-Blog-Post.html  2015-12-05-184700-First-Blog-Post.mdn  2016-03-21-aeson.html  2016-03-21-aeson.md  2016-03-21.html  2016-03-21.md  2016-03-23-ansible-intro.html  2016-03-23-ansible-intro.md  2016-03-23.html  2016-03-23.md  2016-03-28-hackage-intro.html  2016-03-28-hackage-intro.md  2016-03-28.html  2016-03-28.md  2016-08-12-macroid-whys.html  2016-08-12-macroid-whys.md  2016-10-07-why-or-why-not-ruby.html  2016-10-07-why-or-why-not-ruby.md  2016-10-10-my-101s.html  2016-10-10-my-101s.md  2016-10-15-using-fp-just-for-fun.html  2016-10-15-using-fp-just-for-fun.md  2016-12-02-Organize-my-time.html  2016-12-02-Organize-my-time.md  2016-12-23-Choosing-the-right-task.html  2016-12-23-Choosing-the-right-task.md  2016-12-28-INTRO-AI.html  2016-12-28-INTRO-AI.md  2017-01-02-Productivity-tips.html  2017-01-02-Productivity-tips.md  2017-03-26-Refactoring-this-blog-post.html  2017-03-26-Refactoring-this-blog-post.md  2017-09-02-ghci-pt1.html  (+36 more)
(+39 files in other folders)
