name:               cristhianmotoche-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base >=4.8 && <5
                  , hakyll == 4.12.*
                  , optparse-applicative >= 0.12 && < 0.15
  ghc-options:      -threaded
  default-language: Haskell2010
