name:               cristhianmotoche-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base >=4.8 && <5
                  , time == 1.8.0.2
                  , directory == 1.3.1.5
                  , interpolate == 0.2.0
                  , filepath == 1.4.2
                  , hakyll == 4.12.*
                  , optparse-applicative >= 0.12 && < 0.15
  ghc-options:      -threaded
  default-language: Haskell2010
